adding changeset and basic element paths

--- a/schemas/OSMResponse.yaml
+++ b/schemas/OSMResponse.yaml
@@ -15,7 +15,19 @@ properties:
     example: "http://www.openstreetmap.org/copyright"
     xml:
       attribute: true
+  generator:
+    type: string
+    example: "openstreetmap-cgimap 2.0.1 (2557192 spike-08.openstreetmap.org)"
+    xml:
+      attribute: true
+  license:
+    type: string
+    example: "http://opendatacommons.org/licenses/odbl/1-0/"
+    xml:
+      attribute: true
 required:
   - version
   - copyright
   - attribution
+  - license
+  - generator
