removing swift and updating api urls

--- a/.github/workflows/bundle-on-push.yml
+++ b/.github/workflows/bundle-on-push.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - 'swagger.yaml'
       - 'paths/*.yaml'
+      - 'schemas/*.yaml'
       - '.github/workflows/bundle-on-push.yml'
   workflow_dispatch:
 
