--- a/paths/changeset_json.yaml
+++ b/paths/changeset_json.yaml
@@ -2,7 +2,7 @@ get:
   summary: Get a JSON of the changeset
   description: Get a changeset
   tags:
-    - Changeset
+    - changeset
   parameters:
     - name: id
       in: path
