--- a/.github/workflows/swagger-docs.yaml
+++ b/.github/workflows/swagger-docs.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -40,7 +40,7 @@ jobs:
           mv swagger.yaml .
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.7
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages # The branch the action should deploy to
           folder: . # Deploy the entire directory to preserve your index.html structure
