--- a/paths/element.yaml
+++ b/paths/element.yaml
@@ -15,7 +15,7 @@ get:
       required: true
       description: The ID of the element
       schema:
-        $ref: "../schemas/MapElementID.yaml"
+        $ref: "../schemas/MapElementId.yaml"
   responses:
     200:
       description: The selected element
