--- a/paths/api_capabilities.yaml
+++ b/paths/api_capabilities.yaml
@@ -3,6 +3,7 @@ get:
   - "misc"
   summary: "This API call is meant to provide information about the capabilities and limitations of the current API."
   operationId: "getAPICapabilities"
+  security: []
   responses:
     200:
       description: "successful operation"
