--- a/paths/changeset_json.yaml
+++ b/paths/changeset_json.yaml
@@ -1,6 +1,7 @@
 get:
   summary: Get a JSON of the changeset
   description: Get a changeset
+  security: []
   tags:
     - changeset
   parameters:
@@ -23,6 +24,6 @@ get:
       content:
         application/json:
           schema:
-            $ref: "../schemas/Changeset.yaml"
+            $ref: "../schemas/ChangesetJson.yaml"
     # 404:
     #   $ref: "../responses/not_found.yaml"
