--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OpenAPI documentation for the OpenStreetMap API using Swagger UI",
   "private": true,
   "scripts": {
-    "start": "http-server ./dist -p 8080",
+    "start": "http-server -p 8080 -c-1",
     "lint": "redocly lint swagger.yaml",
     "bundle": "redocly bundle swagger.yaml -o dist/swagger.yaml",
     "build": "npm run lint && npm run bundle",
