--- a/schemas/APICapabilities.yaml
+++ b/schemas/APICapabilities.yaml
@@ -2,7 +2,7 @@ type: object
 properties:
   version:
     type: object
-    description: 'The API call versions that the server will accept'
+    description: "The API call versions that the server will accept"
     properties:
       minimum:
         type: number
@@ -22,7 +22,7 @@ properties:
       maximum:
         type: number
         format: double
-        description: 'The maximum area in square degrees that can be queried by API calls'
+        description: "The maximum area in square degrees that can be queried by API calls"
         example: 0.25
         xml:
           attribute: true
@@ -39,7 +39,7 @@ properties:
     properties:
       per_page:
         type: number
-        description: 'The maximum number of points in a single GPS trace. (Possibly incorrect)'
+        description: "The maximum number of points in a single GPS trace. (Possibly incorrect)"
         example: 5000
         xml:
           attribute: true
@@ -48,7 +48,7 @@ properties:
     properties:
       maximum:
         type: number
-        description: 'The maximum number of nodes that a way may contain'
+        description: "The maximum number of nodes that a way may contain"
         example: 2000
         xml:
           attribute: true
@@ -57,7 +57,7 @@ properties:
     properties:
       maximum_elements:
         type: number
-        description: 'The maximum number of combined nodes, ways and relations that can be contained in a changeset'
+        description: "The maximum number of combined nodes, ways and relations that can be contained in a changeset"
         example: 10000
         xml:
           attribute: true
@@ -71,11 +71,11 @@ properties:
           attribute: true
   status:
     type: object
-    description: 'The status of the database, API and GPX API. The database field is informational, and the API/GPX-API fields indicate what the client should expect.'
+    description: "The status of the database, API and GPX API. The database field is informational, and the API/GPX-API fields indicate what the client should expect."
     properties:
       database:
-        $ref: 'APIStatus.yaml'
+        $ref: "APIStatus.yaml"
       api:
-        $ref: 'APIStatus.yaml'
+        $ref: "APIStatus.yaml"
       gpx:
-        $ref: 'APIStatus.yaml'
+        $ref: "APIStatus.yaml"
