--- a/paths/element_full.yaml
+++ b/paths/element_full.yaml
@@ -11,8 +11,8 @@ get:
       description: Type of element to access
       schema:
         type: string
-        enum: ['way', 'relation']
-        example: 'way'
+        enum: ["way", "relation"]
+        example: "way"
     - name: id
       in: path
       required: true
@@ -36,6 +36,6 @@ get:
                 way: "../schemas/Way.yaml"
                 node: "../schemas/Node.yaml"
     404:
-      $ref: '../responses/errors.yaml#/NotFound'
+      $ref: "../responses/errors.yaml#/NotFound"
     410:
-      $ref: '../responses/errors.yaml#/Gone'
+      $ref: "../responses/errors.yaml#/Gone"
