--- a/schemas/APICapabilitiesResponse.yaml
+++ b/schemas/APICapabilitiesResponse.yaml
@@ -1,9 +1,9 @@
 type: object
 allOf:
-  - $ref: '../schemas/OSMResponse.yaml'
+  - $ref: "../schemas/OSMResponse.yaml"
 properties:
   api:
-    $ref: '../schemas/APICapabilities.yaml'
+    $ref: "../schemas/APICapabilities.yaml"
 xml:
   wrapped: true
   name: osm
