--- a/paths/changeset_close.yaml
+++ b/paths/changeset_close.yaml
@@ -2,7 +2,7 @@ put:
   summary: Close a changeset
   description: Close a changeset
   security:
-    - oauth2-implementation: []
+    - oauth2: []
   tags:
     - changeset
   parameters:
