--- a/paths/element_create.yaml
+++ b/paths/element_create.yaml
@@ -1,7 +1,7 @@
 summary: Create an element
 description: Create an element by its ID
 security:
-  - oauth2-implementation: []
+  - oauth2: []
 tags:
   - element
 parameters:
